Fixed pagination && Added total field for all list api
