# docs/swagger.json
@@ -112,7 +112,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entity.Source"
+                                "$ref": "#/definitions/routes.PaginatedSources"
                             }
                         }
                     }
@@ -292,7 +292,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entity.Table"
+                                "$ref": "#/definitions/routes.PaginatedTables"
                             }
                         }
                     }
@@ -346,7 +346,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entity.Table"
+                                "$ref": "#/definitions/routes.PaginatedTablesData"
                             }
                         }
                     }
@@ -386,7 +386,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entity.User"
+                                "$ref": "#/definitions/routes.PaginatedUsers"
                             }
                         }
                     }
@@ -623,6 +623,63 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "routes.PaginatedSources": {
+            "type": "object",
+            "properties": {
+                "entries": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Source"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "routes.PaginatedTables": {
+            "type": "object",
+            "properties": {
+                "entries": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Table"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "routes.PaginatedTablesData": {
+            "type": "object",
+            "properties": {
+                "entries": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "additionalProperties": true
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "routes.PaginatedUsers": {
+            "type": "object",
+            "properties": {
+                "entries": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.User"
+                    }
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
